More modular means of passing through tunnels rathern than hard coded Sped Up Animation Todo If stuck on a wall pacman should stop chomping If stuck on a wall pacman currently doesnt rotate

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ main{
     background-image:  url('../assets/Pac-Man - All Assets_Palettes.png');
 	background-position:-503px -337px;
 	background-repeat: no-repeat;
-    animation: pacmanIdle 1s steps(2) infinite ;
+    animation: pacmanIdle 0.2s steps(2) infinite ;
     /* animation: name duration timing-function delay iteration-count direction fill-mode; */
 }
 .right{
